--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -31,6 +31,7 @@
     <string name="pref_about_app_version" translatable="false">app_version</string>
     <string name="pref_about_device_id" translatable="false">device_id</string>
     <string name="pref_about_device_info" translatable="false">device_info</string>
+    <string name="pref_go_to_web" translatable="false">go_to_web</string>
     <string name="pref_website" translatable="false">web_link</string>
     <string name="pref_supported_platforms" translatable="false">supported_platforms</string>
     <string name="pref_about_privacy_policy" translatable="false">privacy_policy</string>
