--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="2.4.6"
+        description="July 13th, 2017">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="2.4.5"
         description="July 10th, 2017">
         <text>New web app!</text>
