--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -182,6 +182,7 @@
         <item>2 MB</item>
         <item>3 MB</item>
         <item>5 MB</item>
+        <item>10 MB</item>
     </string-array>
 
     <string-array name="mms_size_values">
@@ -193,6 +194,7 @@
         <item>2_mb</item>
         <item>3_mb</item>
         <item>5_mb</item>
+        <item>10_mb</item>
     </string-array>
 
     <string-array name="keyboard_layout">
