--- a/shared/src/main/res/xml/appwidget_info.xml
+++ b/shared/src/main/res/xml/appwidget_info.xml
@@ -15,6 +15,8 @@
   -->
 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minResizeWidth="140dp"
+    android:minResizeHeight="140dp"
     android:minWidth="240dp"
     android:minHeight="240dp"
     android:updatePeriodMillis="86400000"
