--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="July 24th, 2017">
         <text>Bug fixes</text>
         <text>MMS Improvements</text>
+        <text>Sync improvements</text>
     </version>
 
     <version
