--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,9 +19,11 @@
     <version
         name="2.4.7"
         description="July 24th, 2017">
+        <text>Copy phone numbers from the "Conversation information" option</text>
         <text>Bug fixes</text>
         <text>MMS Improvements</text>
         <text>Sync improvements</text>
+        <text>Image upload improvements</text>
     </version>
 
     <version
