there is no reason to upload here

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="2.4.8"
+        description="July 31st, 2017">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="2.4.7"
         description="July 28th, 2017">
         <text>Copy phone numbers from the "Conversation information" option</text>
