--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="2.4.9"
-        description="July 31st, 2017">
+        description="August 3rd, 2017">
         <text>Bug fixes</text>
     </version>
 
