--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -59,6 +59,7 @@
     <string name="pref_contact_group_name" translatable="false">contact_group_name</string>
     <string name="pref_contact_global_colors_set" translatable="false">global_colors_set</string>
     <string name="pref_contact_notification_channel" translatable="false">notification_channel_settings</string>
+    <string name="pref_contact_notification_channel_restore_default" translatable="false">notification_channel_restore_defaultsettings</string>
     <string name="pref_contact_customization_group" translatable="false">customization_group</string>
     <string name="pref_contact_notification_group" translatable="false">notification_group</string>
 
