--- a/shared/src/main/res/layout/dialog_edit_text.xml
+++ b/shared/src/main/res/layout/dialog_edit_text.xml
@@ -25,6 +25,6 @@
         android:layout_margin="8dp"
         android:id="@+id/edit_text"
         android:hint="@null"
-        android:inputType="textCapSentences|textAutoComplete|textAutoCorrect" />
+        android:inputType="textCapSentences|textAutoComplete|textAutoCorrect|textMultiLine" />
 
 </FrameLayout>
