--- a/shared/src/main/res/layout/contact_list_item.xml
+++ b/shared/src/main/res/layout/contact_list_item.xml
@@ -62,7 +62,7 @@
         android:orientation="vertical"
         android:gravity="center_vertical">
 
-        <TextView
+        <android.support.text.emoji.widget.EmojiAppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
@@ -71,7 +71,7 @@
             android:maxLines="1"
             android:ellipsize="end" />
 
-        <TextView
+        <android.support.text.emoji.widget.EmojiAppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
