--- a/shared/src/main/res/layout/message_error.xml
+++ b/shared/src/main/res/layout/message_error.xml
@@ -50,7 +50,7 @@
             android:layout_marginStart="2dp"
             android:contentDescription="@string/mms_image" />
 
-        <TextView
+        <android.support.text.emoji.widget.EmojiTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="@dimen/max_message_width"
