--- a/shared/src/main/res/layout/message_received_round.xml
+++ b/shared/src/main/res/layout/message_received_round.xml
@@ -46,7 +46,7 @@
             android:padding="3dp"
             android:contentDescription="@string/mms_image" />
 
-        <TextView
+        <android.support.text.emoji.widget.EmojiTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="@dimen/max_message_width"
