--- a/shared/src/main/res/layout/message_media.xml
+++ b/shared/src/main/res/layout/message_media.xml
@@ -51,7 +51,7 @@
             android:orientation="vertical"
             android:paddingBottom="12dp" >
 
-            <android.support.text.emoji.widget.EmojiTextView
+            <xyz.klinker.messenger.shared.view.emoji.EmojiableTextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
                 android:maxLines="1"
                 android:ellipsize="end" />
 
-            <android.support.text.emoji.widget.EmojiTextView
+            <xyz.klinker.messenger.shared.view.emoji.EmojiableTextView
                 android:id="@+id/contact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
                 android:fontFamily="sans-serif-light"
                 android:textColor="@color/primaryText"/>
 
-            <android.support.text.emoji.widget.EmojiTextView
+            <xyz.klinker.messenger.shared.view.emoji.EmojiableTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxWidth="@dimen/max_message_width"
