--- a/shared/src/main/res/layout/message_sent.xml
+++ b/shared/src/main/res/layout/message_sent.xml
@@ -50,7 +50,7 @@
             android:layout_marginStart="2dp"
             android:contentDescription="@string/mms_image" />
 
-        <android.support.text.emoji.widget.EmojiTextView
+        <xyz.klinker.messenger.shared.view.emoji.EmojiableTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="@dimen/max_message_width"
