add settings option to select the emoji types and feature flag it off for now

--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -29,6 +29,16 @@
         <item>extra_large</item>
     </string-array>
 
+    <string-array name="emoji_style">
+        <item>@string/emoji_style_default</item>
+        <item>@string/emoji_style_android_o</item>
+    </string-array>
+
+    <string-array name="emoji_style_values">
+        <item>default</item>
+        <item>android_o</item>
+    </string-array>
+
     <string-array name="global_color">
         <item>@string/set_color_per_conversation</item>
         <item>@string/material_color_red</item>
