--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -88,6 +88,7 @@
     <string name="pref_history_in_notifications" translatable="false">history_in_notifications</string>
     <string name="pref_giffgaff" translatable="false">giffgaff_delivery</string>
     <string name="pref_notification_actions" translatable="false">notification_actions</string>
+    <string name="pref_emoji_style" translatable="false">emoji_style</string>
 
     <string name="pref_secure_private_conversations" translatable="false">secure_private_conversations</string>
     <string name="pref_quick_compose" translatable="false">quick_compose</string>
