--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -103,7 +103,7 @@
     <color name="tooltipBackground">#616161</color>
 
     <!-- Theme Specific Colors -->
-    <color name="background">#E5E5E5</color>
+    <color name="background">#EEEEEE</color>
     <color name="quickReplyBackground">#FFFFFF</color>
     <color name="swipeBackground">#D5D5D5</color>
     <color name="drawerBackground">@android:color/white</color>
