--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         <!--description="August 14th, 2017">-->
         <!--<text>Select between the system default and the Android O emojis</text>-->
         <!--<text>Send messages from Android TV</text>-->
+        <!--<text>Bug fixes</text>-->
     <!--</version>-->
 
     <version
