--- a/shared/src/main/res/xml/settings_theme.xml
+++ b/shared/src/main/res/xml/settings_theme.xml
@@ -1,30 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
-    <xyz.klinker.messenger.view.AutoSummaryListPreference
-        android:key="@string/pref_base_theme"
-        android:title="@string/base_theme"
-        android:entries="@array/base_theme"
-        android:entryValues="@array/base_theme_values"
-        android:defaultValue="day_night" />
+    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
+        android:key="@string/pref_general_category"
+        android:title="@string/general_category">
 
-    <xyz.klinker.messenger.view.AutoSummaryListPreference
-        android:key="@string/pref_global_color_theme"
-        android:title="@string/global_theme_color"
-        android:entries="@array/global_color"
-        android:entryValues="@array/global_color_values"
-        android:defaultValue="default" />
+        <xyz.klinker.messenger.view.AutoSummaryListPreference
+            android:key="@string/pref_base_theme"
+            android:title="@string/base_theme"
+            android:entries="@array/base_theme"
+            android:entryValues="@array/base_theme_values"
+            android:defaultValue="day_night" />
 
-    <xyz.klinker.messenger.view.AutoSummaryListPreference
-        android:key="@string/pref_font_size"
-        android:title="@string/font_size"
-        android:entries="@array/font_size"
-        android:entryValues="@array/font_size_values"
-        android:defaultValue="normal" />
+        <xyz.klinker.messenger.view.AutoSummaryListPreference
+            android:key="@string/pref_font_size"
+            android:title="@string/font_size"
+            android:entries="@array/font_size"
+            android:entryValues="@array/font_size_values"
+            android:defaultValue="normal" />
 
-    <SwitchPreference
-        android:key="@string/pref_rounder_bubbles"
-        android:title="@string/rounder_bubbles"
-        android:defaultValue="false" />
+        <SwitchPreference
+            android:key="@string/pref_rounder_bubbles"
+            android:title="@string/rounder_bubbles"
+            android:defaultValue="false" />
+
+    </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
+
+    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
+        android:key="@string/pref_advanced_category"
+        android:title="@string/conversation_list_category">
+
+        <xyz.klinker.messenger.view.ColorPreference
+            android:key="@string/pref_global_primary_color"
+            android:title="@string/primary_color"
+            app:display_normalize="true"/>
+
+        <xyz.klinker.messenger.view.ColorPreference
+            android:key="@string/pref_global_primary_dark_color"
+            android:title="@string/primary_dark_color"
+            app:display_normalize="false" />
+
+        <xyz.klinker.messenger.view.ColorPreference
+            android:key="@string/pref_global_accent_color"
+            android:title="@string/accent_color"
+            app:display_normalize="false" />
+
+        <SwitchPreference
+            android:key="@string/pref_apply_theme_globally"
+            android:title="@string/apply_theme_globally"
+            android:summary="@string/apply_theme_globally_summary"
+            android:defaultValue="false" />
+
+    </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
 
 </PreferenceScreen>
