remove the old strings from the other languages

--- a/api_implementation/src/main/res/values-da/api_string.xml
+++ b/api_implementation/src/main/res/values-da/api_string.xml
@@ -17,28 +17,31 @@
 <resources>
     <string name="api_login">Log ind</string>
     <string name="api_signup">Opret</string>
-    <string name="api_signup_failed">Kan ikke oprettes på denne enhed. Du skal registrere dig via en primær enhed, som har tilknyttet et mobilnummer.</string>
-    <string name="api_skip_signup">Eller, hvis du blot ønsker at bruge app´en på denne enhed og ikke på netværket
-        funktioner som at skrive fra en tablet eller computer, så kan du springe dette trin over:</string>
+    <string name="api_signup_failed">Kan ikke oprettes på denne enhed. Du skal registrere dig via en primær enhed, der har tilknyttet et mobilnummer.</string>
+    <string name="api_skip_signup">Eller, hvis du blot ønsker at bruge app\'en på denne enhed og ikke med funktioner som at skrive beskeder fra en tablet eller computer, så kan du springe dette trin over:</string>
     <string name="api_skip">Spring over</string>
-    <string name="api_email">E-mailadresse</string>
+    <string name="api_email">E-mail adresse</string>
     <string name="api_password">Kodeord</string>
     <string name="api_forgot_password">Glemt kodeord?</string>
     <string name="api_password_confirmation">Bekræft kodeord</string>
     <string name="api_name">Navn</string>
     <string name="api_phone_number">Mobilnummer</string>
+    <string name="api_connecting">Forbinder til server....</string>
     <string name="api_device_error">Der er opstået en fejl under tilføjelse af denne enhed. Lad os prøve igen!</string>
+    <string name="api_add_second_primary_device">Det ser ud til, du allerede har en primær enhed (%1$s) tilknyttet din konto, og kun én enhed kan bruges. Vil du fjerne den aktuelle primære enhed og bruge den her i stedet for?</string>
     <string name="api_yes">Ja</string>
     <string name="api_no">Nej</string>
-    <string name="api_no_email">Ingen e-mailadresse tilføjet</string>
-    <string name="api_email_invalid">Fejl ved email adresse</string>
+    <string name="api_no_email">E-mail adresse mangler</string>
+    <string name="api_email_invalid">Ugyldig e-mail adresse</string>
     <string name="api_no_password">Intet kodeord registreret</string>
     <string name="api_no_password_confirmation">Kodeordbekræftelse ikke registreret</string>
     <string name="api_password_mismatch">Kodeord er ikke ens</string>
     <string name="api_no_name">Intet navn tilføjet</string>
     <string name="api_no_phone_number">Intet telefonnummer tilføjet</string>
-    <string name="api_login_error">Forsøget på at logge på lykkedes ikke , forkert e-mail eller kodeord?</string>
+    <string name="api_login_error">Forsøget på at logge på mislykkedes, forkert e-mail eller kodeord?</string>
     <string name="api_activate_summary">Log på for at få alle dine beskeder på denne enhed!</string>
+    <string name="api_activate_1">1</string>
+    <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Gå til</string>
     <string name="api_activate_1_3">på en mobil enhed eller en computer</string>
     <string name="api_activate_2_1">På hjemmesiden</string>
