update firebase and google play services

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -27,6 +27,7 @@
         <text>Cleanup the settings menu</text>
         <text>Fixes for marking MMS as seen</text>
         <text>Improved memory management</text>
+        <text>Performance improvements</text>
         <text>Bug and crash fixes</text>
     </version>
 
