long clicking the send button will send messages without the signature, if the user has one set up through settings

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -25,6 +25,7 @@
         <text>[New] Select between the system default and the Android O emojis</text>
         <text>[New] Edit recipients in group messages</text>
         <text>[New] Send messages from the Android TV app</text>
+        <text>[New] Long clicking the send button will send messages without the signature, if you have a signature set up in settings</text>
         <text>Cleanup the settings menu</text>
         <text>Fixes for marking MMS as seen</text>
         <text>Improved memory management</text>
