--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -28,6 +28,7 @@
         <text>[New] Long clicking the send button will send messages without the signature, if you have a signature set up in settings</text>
         <text>Cleanup the settings menu</text>
         <text>Fixes for marking MMS as seen</text>
+        <text>MMS improvements</text>
         <text>Improved memory management</text>
         <text>Performance improvements</text>
         <text>Bug and crash fixes</text>
