--- a/shared/src/main/res/layout/activity_messenger.xml
+++ b/shared/src/main/res/layout/activity_messenger.xml
@@ -43,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <android.support.v7.widget.Toolbar
+                    <xyz.klinker.messenger.shared.view.WhitableToolbar
                         android:id="@+id/toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
