--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -24,6 +24,7 @@
         <text>[New - Global Themes] Set the accent color separately from the primary color</text>
         <text>[New] Select between the system default and the Android O emojis</text>
         <text>[New] Edit recipients in group messages</text>
+        <text>[New] White theme option and improvements for light theme support</text>
         <text>[New] Send messages from the Android TV app</text>
         <text>[New] Long clicking the send button will send messages without the signature, if you have a signature set up in settings</text>
         <text>Cleanup the settings menu</text>
